--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,14 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
     </dependencies>
+
 
     <build>
         <plugins>
